Refactored screen and TagKey (TagKey from Bommels05) and mixins optimization