@@ -2,73 +2,144 @@ package dev.emi.emi.registry;
 
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
+import dev.emi.emi.EmiPort;
+import dev.emi.emi.config.EmiConfig;
+import dev.emi.emi.config.IndexSource;
 import dev.emi.emi.data.EmiAlias;
 import dev.emi.emi.data.EmiRemoveFromIndex;
 import dev.emi.emi.data.IndexStackData;
+import dev.emi.emi.mixin.minecraft.accessor.ItemBlockAccessor;
 import dev.emi.emi.runtime.EmiHidden;
 import dev.emi.emi.runtime.EmiLog;
-import dev.emi.emi.api.stack.Comparison;
 import dev.emi.emi.api.stack.EmiIngredient;
 import dev.emi.emi.api.stack.EmiStack;
+import it.unimi.dsi.fastutil.Hash;
 import it.unimi.dsi.fastutil.objects.Object2IntMap;
+import it.unimi.dsi.fastutil.objects.Object2IntOpenCustomHashMap;
 import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
+import it.unimi.dsi.fastutil.objects.ObjectOpenCustomHashSet;
+import net.minecraft.block.Block;
+import net.minecraft.creativetab.CreativeTabs;
 import net.minecraft.item.Item;
+import net.minecraft.item.ItemBlock;
 import net.minecraft.item.ItemStack;
+import net.minecraft.nbt.NBTTagCompound;
+import net.minecraft.tag.ItemKey;
+import net.minecraft.tag.TagKey;
+import net.minecraftforge.fluids.Fluid;
 
 import java.util.*;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 public class EmiStackList {
-    public static List<EmiAlias.Baked> registryAliases = Lists.newArrayList();
+    private static final TagKey<ItemKey> ITEM_HIDDEN = TagKey.of(ItemKey.class, EmiTags.HIDDEN_FROM_RECIPE_VIEWERS);
+    private static final TagKey<Block> BLOCK_HIDDEN = TagKey.of(Block.class, EmiTags.HIDDEN_FROM_RECIPE_VIEWERS);
+    private static final TagKey<Fluid> FLUID_HIDDEN = TagKey.of(Fluid.class, EmiTags.HIDDEN_FROM_RECIPE_VIEWERS);    public static List<EmiAlias.Baked> registryAliases = Lists.newArrayList();
     public static List<Predicate<EmiStack>> invalidators = Lists.newArrayList();
-    public static List<EmiStack> stacks = Collections.emptyList();
-    public static List<EmiStack> filteredStacks = Collections.emptyList();
-    public static Object2IntMap<EmiStack> indices = new Object2IntOpenHashMap<>();
+    public static List<EmiStack> stacks = com.rewindmc.retroemi.shim.java.List.of();
+    public static List<EmiStack> filteredStacks = com.rewindmc.retroemi.shim.java.List.of();
+    private static Object2IntMap<EmiStack> strictIndices = new Object2IntOpenCustomHashMap<>(new StrictHashStrategy());
+    public static Object2IntMap<EmiStack> keyIndices = new Object2IntOpenHashMap<>();
 
     public static void clear() {
         invalidators.clear();
         registryAliases.clear();
         stacks = Collections.emptyList();
-        indices.clear();
+        strictIndices.clear();
+        keyIndices.clear();
     }
 
     public static void reload() {
         List<IndexGroup> groups = Lists.newArrayList();
-        IndexGroup itemGroup = new IndexGroup();
-        List<ItemStack> stackList = Lists.newArrayList();
-
-        for (Object obj : Item.itemRegistry) {
-            Item item = (Item) obj;
-            if (item == null) continue;
-            item.getSubItems(item, item.getCreativeTab(), stackList);
-            for (ItemStack is : stackList) {
-                itemGroup.stacks.add(EmiStack.of(is));
+        Map<String, IndexGroup> namespaceGroups = new LinkedHashMap<>();
+        Map<String, IndexGroup> creativeGroups = new LinkedHashMap<>();
+        for (Item item : (Iterable<Item>) EmiPort.getItemRegistry()) {
+            String itemName = "null";
+            try {
+                itemName = item.toString();
+                EmiStack stack = EmiStack.of(item);
+                namespaceGroups.computeIfAbsent(stack.getId().getResourceDomain(), (k) -> new IndexGroup()).stacks.add(stack);
+            } catch (Exception e) {
+                EmiLog.error("Item " + itemName + " threw while EMI was attempting to construct the index, items may be missing.", e);
             }
-            stackList.clear();
         }
-        groups.add(itemGroup);
-
+        for (Item item : (Iterable<Item>) EmiPort.getItemRegistry()) {
+            String itemName = "null";
+            try {
+                itemName = item.toString();
+                List<ItemStack> itemStacks = new ArrayList<>();
+                item.getSubItems(item, CreativeTabs.tabAllSearch, itemStacks);
+                List<EmiStack> stacks = itemStacks.stream().filter(s -> s != null && s.getItem() != null).map(EmiStack::of).collect(Collectors.toList());
+                if (!stacks.isEmpty()) {
+                    creativeGroups.computeIfAbsent(stacks.get(0).getId().getResourceDomain(), (k) -> new IndexGroup()).stacks.addAll(stacks);
+                }
+            } catch (Exception e) {
+                EmiLog.error("Item " + itemName + " threw while EMI was attempting to construct the index, items may be missing.", e);
+            }
+        }
+        if (EmiConfig.indexSource == IndexSource.CREATIVE) {
+            for (String namespace : namespaceGroups.keySet()) {
+                if (creativeGroups.containsKey(namespace)) {
+                    IndexGroup ng = namespaceGroups.get(namespace);
+                    IndexGroup cg = creativeGroups.get(namespace);
+                    if (cg.stacks.size() * 3 >= ng.stacks.size()) {
+                        ng.suppressedBy.add(cg);
+                    }
+                }
+            }
+        }
+        if (EmiConfig.indexSource != IndexSource.REGISTERED) {
+            groups.addAll(creativeGroups.values());
+        }
+        groups.addAll(namespaceGroups.values());
         IndexGroup fluidGroup = new IndexGroup();
-        //	for (var fluid : LiquidDictionary.getLiquids().entrySet()) {
-        //		EmiStack fs = EmiStack.of(Fluid.of(fluid.getValue()));
-        //		fluidGroup.stacks.add(fs);
-        //	}
+        for (Fluid fluid : EmiPort.getFluidRegistry().values()) {
+            String fluidName = null;
+            try {
+                fluidName = fluid.toString();
+                EmiStack fs = EmiStack.of(fluid);
+                fluidGroup.stacks.add(fs);
+            } catch (Exception e) {
+                EmiLog.error("Fluid  " + fluidName + " threw while EMI was attempting to construct the index, stack may be missing.", e);
+            }
+        }
         groups.add(fluidGroup);
 
-        Set<EmiStack> added = Sets.newHashSet();
+        Set<EmiStack> added = new ObjectOpenCustomHashSet<>(new StrictHashStrategy());
 
         stacks = Lists.newLinkedList();
         for (IndexGroup group : groups) {
             if (group.shouldDisplay()) {
                 for (EmiStack stack : group.stacks) {
-                    if (!stack.isEmpty() && !added.contains(stack)) {
+                    if (!added.contains(stack)) {
                         stacks.add(stack);
-                        added.add(stack.copy().comparison(Comparison.compareNbt()));
+                        added.add(stack);
                     }
                 }
             }
         }
+    }
+
+    @SuppressWarnings({"deprecation", "unchecked"})
+    private static <T> boolean isHiddenFromRecipeViewers(T key) {
+        if (key instanceof Item i) {
+            if (i instanceof ItemBlock bi && BLOCK_HIDDEN.contains(((ItemBlockAccessor) bi).getBlock())) {
+                return true;
+//            } else if (ITEM_HIDDEN.contains(i)) {
+//                return true;
+            }
+        } else if (key instanceof Fluid f) {
+            if (FLUID_HIDDEN.contains(f)) {
+                return true;
+            }
+//        } else {
+//            EmiRegistryAdapter<T> adapter = (EmiRegistryAdapter<T>) EmiTags.ADAPTERS_BY_CLASS.get(key.getClass());
+//            if (adapter != null) {
+//                return adapter.getRegistry().getEntry(key).isIn(TagKey.of(adapter.getRegistry().getKey(), EmiTags.HIDDEN_FROM_RECIPE_VIEWERS));
+//            }
+        }
+        return false;
     }
 
     @SuppressWarnings("deprecation")
@@ -83,6 +154,9 @@ public class EmiStackList {
                         return true;
                     }
                 }
+                if (isHiddenFromRecipeViewers(s.getKey())) {
+                    return true;
+                }
                 return false;
             } catch (Throwable t) {
                 EmiLog.error("Stack threw error while baking", t);
@@ -95,7 +169,7 @@ public class EmiStackList {
             Set<EmiStack> removed = Sets.newHashSet();
             for (EmiIngredient invalidator : ssd.removed()) {
                 for (EmiStack stack : invalidator.getEmiStacks()) {
-                    removed.add(stack.copy().comparison(c -> Comparison.compareNbt()));
+                    removed.add(stack.copy().comparison(c -> EmiPort.compareStrict()));
                 }
             }
             stacks.removeAll(removed);
@@ -131,19 +205,29 @@ public class EmiStackList {
                 EmiLog.warn("Hiding stack " + name + " with id " + id + " from index due to returning dangerous values");
                 return false;
             } catch (Throwable t) {
-                EmiLog.warn("Hiding stack " + name + " with id " + id + " from index due to throwing errors");
-                t.printStackTrace();
+                EmiLog.error("Hiding stack " + name + " with id " + id + " from index due to throwing errors", t);
                 return false;
             }
         }).collect(Collectors.toList());
         for (int i = 0; i < stacks.size(); i++) {
-            indices.put(stacks.get(i), i);
+            EmiStack stack = stacks.get(i);
+            strictIndices.put(stack, i);
+            keyIndices.put(stacks.get(i), i);
         }
         bakeFiltered();
     }
 
     public static void bakeFiltered() {
         filteredStacks = stacks.stream().filter(s -> !EmiHidden.isHidden(s)).collect(Collectors.toList());
+    }
+
+    public static int getIndex(EmiIngredient ingredient) {
+        EmiStack stack = ingredient.getEmiStacks().get(0);
+        int ret = strictIndices.getOrDefault(stack, Integer.MAX_VALUE);
+        if (ret == Integer.MAX_VALUE) {
+            ret = keyIndices.getOrDefault(stack, ret);
+        }
+        return ret;
     }
 
     public static class IndexGroup {
@@ -157,6 +241,55 @@ public class EmiStackList {
                 }
             }
             return true;
+        }
+    }
+
+    public static class StrictHashStrategy implements Hash.Strategy<EmiStack> {
+
+        @Override
+        public boolean equals(EmiStack a, EmiStack b) {
+            if (a == b) {
+                return true;
+            } else if (a == null || b == null) {
+                return false;
+            } else if (a.isEmpty() && b.isEmpty()) {
+                return true;
+            }
+            return a.isEqual(b, EmiPort.compareStrict());
+        }
+
+        @Override
+        public int hashCode(EmiStack stack) {
+            if (stack != null) {
+                NBTTagCompound changes = stack.getNbt();
+                int i = 31 + stack.getKey().hashCode();
+                return 31 * i + (changes == null ? 0 : changes.hashCode());
+            }
+            return 0;
+        }
+    }
+
+    public static class ComparisonHashStrategy implements Hash.Strategy<EmiStack> {
+
+        @Override
+        public boolean equals(EmiStack a, EmiStack b) {
+            if (a == b) {
+                return true;
+            } else if (a == null || b == null) {
+                return false;
+            } else if (a.isEmpty() && b.isEmpty()) {
+                return true;
+            }
+            return a.isEqual(b, EmiComparisonDefaults.get(a.getKey()));
+        }
+
+        @Override
+        public int hashCode(EmiStack stack) {
+            if (stack != null) {
+                int i = 31 + stack.getKey().hashCode();
+                return 31 * i + EmiComparisonDefaults.get(stack.getKey()).getHash(stack);
+            }
+            return 0;
         }
     }
 }
